# file-batch

./: CMakeLists.txt
cmake/: Findeverything_sdk.cmake
src/: EverythingModel.cpp  EverythingModel.h  IFileProcessor.cpp  IFileProcessor.h  LogWidget.cpp  LogWidget.h  Logger.cpp  Logger.h  MainWindow.cpp  MainWindow.h  SearchWidget.cpp  SearchWidget.h  main.cpp
src/app/: CMakeLists.txt
src/app/file_batch/: CMakeLists.txt
src/app/file_batch/src/: main.cpp
